# shaders

./: README.md
glad/include/glad/: gl.h
p1/: .gitignore  CMakeLists.txt  README.md
p1/src/: config.h  main.cpp
